[gd_scene load_steps=8 format=3 uid="uid://dv1ifjoimgy6w"]

[ext_resource type="Script" uid="uid://dft0vo0v0pin5" path="res://Main Menu/menu_scripts/main_menu.gd" id="1_rc5jk"]
[ext_resource type="Texture2D" uid="uid://ch6qdh4bge82a" path="res://Resources/PNGS/titlescreen.png" id="2_e4cqa"]
[ext_resource type="FontFile" uid="uid://b8igig0eal0nx" path="res://Resources/Fonts/CarltineSemiBold-2O9Xe.ttf" id="3_mxnwx"]
[ext_resource type="AudioStream" uid="uid://ovlouoiwfk4h" path="res://Resources/Sounds/default_bus_layout.tres" id="4_j1wmk"]
[ext_resource type="AudioStream" uid="uid://dw54wc2hkgtcc" path="res://Resources/Sounds/ButtonSFX.mp3" id="5_i84hn"]
[ext_resource type="PackedScene" uid="uid://dq87r4vhinqqi" path="res://Main Menu/menu_scenes/options_menu.tscn" id="6_0xijq"]

[sub_resource type="Theme" id="Theme_8ketd"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rc5jk")

[node name="BackgroundTitle" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 2.0
offset_top = 3.0
offset_right = 1919.0
offset_bottom = 1077.0
texture = ExtResource("2_e4cqa")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -209.0
offset_top = -440.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mxnwx")
theme_override_font_sizes/font_size = 60
text = "Uncle Detective"

[node name="Start_Game" type="Button" parent="MarginContainer/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
theme = SubResource("Theme_8ketd")
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mxnwx")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Options_Button" type="Button" parent="MarginContainer/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
theme = SubResource("Theme_8ketd")
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mxnwx")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
theme = SubResource("Theme_8ketd")
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mxnwx")
theme_override_font_sizes/font_size = 50
text = "Credits"

[node name="Exit_Game" type="Button" parent="MarginContainer/VBoxContainer" groups=["ui_button"]]
layout_mode = 2
theme = SubResource("Theme_8ketd")
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_mxnwx")
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_j1wmk")
volume_db = -15.0
autoplay = true

[node name="Hoversfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_i84hn")
volume_db = 10.0

[node name="Options_Menu" parent="." instance=ExtResource("6_0xijq")]
layout_mode = 1
offset_top = 2.0
offset_bottom = 2.0
